# iros22-pmpc

./: CMakeLists.txt  README.md
include/pmpc/: _ns_doc.hpp  devel.hpp  exceptions.hpp  macros.hpp
include/pmpc/controls/: _ns_doc.hpp  free_samples_processing.hpp  function_basis.hpp  lerp.hpp  linear.hpp  parameterization.hpp  simple.hpp  zoh.hpp
include/pmpc/models/: _ns_doc.hpp  model_function.hpp
include/pmpc/models/continuous/: _ns_doc.hpp  crane_pendulum.hpp  integrator.hpp  linear.hpp  mass_spring_damper.hpp  model.hpp
include/pmpc/models/discrete/: _ns_doc.hpp  euler_integrator.hpp  linear.hpp  linear_discretized.hpp  model.hpp  rk4_integrator.hpp
include/pmpc/optimization/: _ns_doc.hpp  control_constraints.hpp  function_basis_constraints.hpp  lerp_control_constraints.hpp  linear_control_constraints.hpp  linear_solver_base.hpp  linear_solver_qpoases.hpp  nonlinear_solver_base.hpp  objective_base.hpp  parameters_initialization.hpp  quadratic_objective.hpp  simple_control_constraints.hpp  simplified_gauss_newton_solver.hpp
include/pmpc/predictors/: _ns_doc.hpp  linear.hpp  recursive.hpp
matplotlibcpp/: matplotlibcpp.h
src/: example_crane_pendulum.cpp  example_triple_integrator.cpp  utils.hpp
